[gd_scene load_steps=9 format=3 uid="uid://iwvql316ml8v"]

[ext_resource type="Texture2D" uid="uid://du7i46ggf4e3w" path="res://Assets/UI/Ribbons/Ribbon_Red_Connection_Down_Pressed.png" id="1_kcgtg"]
[ext_resource type="Script" path="res://Scripts/UI/toko_senjata.gd" id="1_r03vn"]
[ext_resource type="Texture2D" uid="uid://by4goq2bgef44" path="res://Assets/collectable/W_Idle.png" id="2_teigg"]
[ext_resource type="Texture2D" uid="uid://ddjetmlond764" path="res://Assets/Player/Armi Black png.png" id="3_642ki"]
[ext_resource type="Texture2D" uid="uid://55bedm8wghur" path="res://Assets/world/01.png" id="3_uj15h"]
[ext_resource type="Texture2D" uid="uid://bqbllwk0yqeuc" path="res://Assets/Player/Exotic Swords.png" id="5_mnf1g"]
[ext_resource type="Texture2D" uid="uid://ef7g7wx1ro6m" path="res://Assets/UI/Icons/Disable_01.png" id="7_0mdrh"]
[ext_resource type="Texture2D" uid="uid://cbak7qcxte4my" path="res://Assets/UI/Icons/Pressed_01.png" id="8_7yyaa"]

[node name="Toko_senjata" type="CanvasLayer"]
script = ExtResource("1_r03vn")

[node name="MENU_AWAL" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -133.0
offset_right = -62.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("1_kcgtg")

[node name="HBoxContainer" type="VBoxContainer" parent="MENU_AWAL"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.75
offset_top = -15.0
offset_right = 77.25
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)

[node name="button_beli" type="Button" parent="MENU_AWAL/HBoxContainer"]
layout_mode = 2
text = "BELI"

[node name="button_jual" type="Button" parent="MENU_AWAL/HBoxContainer"]
layout_mode = 2
text = "JUAL"

[node name="MENU_JUAL" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -133.0
offset_right = -62.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("1_kcgtg")

[node name="Label" type="Label" parent="MENU_JUAL"]
layout_mode = 0
offset_left = 25.5
offset_top = 6.5
offset_right = 65.5
offset_bottom = 29.5
scale = Vector2(0.4, 0.4)
text = "JUAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="jual_kayu_button" type="Button" parent="MENU_JUAL"]
layout_mode = 0
offset_left = 14.0
offset_top = 19.25
offset_right = 22.0
offset_bottom = 27.25
scale = Vector2(1.5, 1.5)

[node name="kayu" type="Sprite2D" parent="MENU_JUAL"]
position = Vector2(20.25, 20.75)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_teigg")

[node name="Label" type="Label" parent="MENU_JUAL/kayu"]
offset_left = 38.75
offset_top = -5.0
offset_right = 78.75
offset_bottom = 18.0
scale = Vector2(2, 2)
text = "5"

[node name="kayu_player" type="Label" parent="MENU_JUAL/kayu"]
offset_left = -6.25
offset_top = 26.25
offset_right = 8.75
offset_bottom = 49.25
horizontal_alignment = 1

[node name="coin" type="Sprite2D" parent="MENU_JUAL/kayu"]
position = Vector2(75, 17.5)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_uj15h")

[node name="MENU_BELI" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -133.0
offset_right = -62.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("1_kcgtg")

[node name="Label" type="Label" parent="MENU_BELI"]
layout_mode = 0
offset_left = 25.5
offset_top = 6.5
offset_right = 65.5
offset_bottom = 29.5
scale = Vector2(0.4, 0.4)
text = "BELI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pickaxe_button" type="Button" parent="MENU_BELI"]
visible = false
layout_mode = 0
offset_left = 14.0
offset_top = 19.25
offset_right = 22.0
offset_bottom = 27.25

[node name="pickaxe" type="Sprite2D" parent="MENU_BELI/pickaxe_button"]
position = Vector2(4.4, 4)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_642ki")
region_enabled = true
region_rect = Rect2(0, 10.526, 31, 37.8543)

[node name="Label" type="Label" parent="MENU_BELI/pickaxe_button/pickaxe"]
offset_left = 25.8333
offset_top = -9.16667
offset_right = 65.8333
offset_bottom = 13.8333
text = "100"

[node name="coin_counter2" type="Sprite2D" parent="MENU_BELI/pickaxe_button/pickaxe"]
position = Vector2(65.8333, 3.33334)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_uj15h")

[node name="sword_button" type="Button" parent="MENU_BELI"]
layout_mode = 0
offset_left = 28.0
offset_top = 24.75
offset_right = 36.0
offset_bottom = 32.75

[node name="sword" type="Sprite2D" parent="MENU_BELI/sword_button"]
position = Vector2(4, 4)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_mnf1g")
hframes = 3
vframes = 3
frame = 5
region_rect = Rect2(0, 10.526, 31, 37.8543)

[node name="Label" type="Label" parent="MENU_BELI/sword_button/sword"]
offset_left = 18.0
offset_top = -6.16666
offset_right = 58.0
offset_bottom = 16.8333
scale = Vector2(0.7, 0.7)
text = "150"

[node name="coin_counter2" type="Sprite2D" parent="MENU_BELI/sword_button/sword"]
position = Vector2(44, 2.66667)
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_uj15h")

[node name="coin_counter" type="Sprite2D" parent="."]
position = Vector2(167, 196)
scale = Vector2(3, 3)
texture = ExtResource("3_uj15h")

[node name="Label_coin" type="Label" parent="."]
offset_left = 192.0
offset_top = 187.0
offset_right = 232.0
offset_bottom = 210.0
vertical_alignment = 1

[node name="quit" type="TextureButton" parent="."]
offset_left = 270.0
offset_top = 16.0
offset_right = 334.0
offset_bottom = 80.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_0mdrh")
texture_hover = ExtResource("8_7yyaa")

[connection signal="pressed" from="MENU_AWAL/HBoxContainer/button_beli" to="." method="_on_button_beli_pressed"]
[connection signal="pressed" from="MENU_AWAL/HBoxContainer/button_jual" to="." method="_on_button_jual_pressed"]
[connection signal="pressed" from="MENU_JUAL/jual_kayu_button" to="." method="_on_jual_kayu_button_pressed"]
[connection signal="pressed" from="MENU_BELI/pickaxe_button" to="." method="_on_pickaxe_button_pressed"]
[connection signal="pressed" from="MENU_BELI/sword_button" to="." method="_on_sword_button_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
